# maze-solver

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  MazeSolver  README.md  build-and-run.sh  cmake_install.cmake  debug-build.sh  maze-solver.code-workspace
scripts/: build-debug.sh  build-prod.sh  build-tests.sh  run-debug.sh  run-prod.sh  run-tests.sh
src/: ImageLoader.cpp  main.cpp
src/Building/: GraphBuilder.cpp  GraphBuilder.h  GraphDirection.cpp  GraphDirection.h  GraphNode.cpp  GraphNode.h  GraphNodeEvaluationManager.cpp  GraphNodeEvaluationManager.h  ImageLoader.h
src/GraphBuilding/: GraphBuilder.cpp  GraphBuilder.h  GraphNodeEvaluationManager.cpp  GraphNodeEvaluationManager.h  ImageLoader.cpp  ImageLoader.h
src/GraphSolving/: GraphSolver.cpp  GraphSolver.h  PathFinder.cpp  PathFinder.h
src/GraphSolving/GraphSolvingStrategies/: DijkstraStrategy.cpp  DijkstraStrategy.h  IGraphSolvingStrategy.h
src/ImageManipulation/: ImageLoader.cpp  ImageLoader.h  ImageModifier.cpp  ImageModifier.h
src/MazeSolving/: MazeSolver.cpp  MazeSolver.h
src/MazeSolving/MazeSolvingStrategies/: DijkstraStrategy.cpp  DijkstraStrategy.h  IMazeSolvingStrategy.h
src/Models/: GraphConnection.cpp  GraphConnection.h  GraphDirection.cpp  GraphDirection.h  GraphEntryPoints.h  GraphNode.cpp  GraphNode.h  GraphPosition.h
test/: BaseTest.cc  TestDijkstraStrategy.cc  TestGraphBuilder.cc
